fix: resolve minor layout issues

--- a/src/tenants/salesforce/VTOCampaign2025/styles/ContentSection.module.scss
+++ b/src/tenants/salesforce/VTOCampaign2025/styles/ContentSection.module.scss
@@ -42,6 +42,9 @@
         margin-bottom: 15px;
       }
     }
+    ul {
+      padding: 0 15px;
+    }
     p,
     ul li {
       font-family: $primaryFontFamily;
